# streaming-structured-outputs

./: .gitignore  LICENSE  README.md  pyproject.toml
streaming_structured_outputs/: __init__.py  create.py
tests/: test_create.py
